# schauspielhaus

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  compose.yml  fly.toml  prod-env
migrations/2023-10-08-144548_plays-and-screenings/: down.sql  up.sql
migrations/2023-10-13-192326_add-chats-topics/: down.sql  up.sql
migrations/2024-09-22-084054_add-topic-pinned-message-id/: down.sql  up.sql
migrations/2024-09-22-113543_topic-add-chat-id-play-id-unique/: down.sql  up.sql
migrations/2024-09-22-123129_topic-add-pinned-message-hash/: down.sql  up.sql
migrations/2024-09-26-193113_add-screening-ticket-url/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  notes.md  schema.rs  scrape.rs
src/testdata/: calendar.html  test_download_play.golden  test_find_play_with_screenings.golden  test_find_plays.golden  test_metainfo_selector.golden
testdata/: play.html  play_curl.html
