[package]
name = "schauspielhaus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"   # Example: using the env_logger crate
ical = { version = "0.7", default-features = false, features = ["property"] }
regex = "1.5"
diesel = { version = "2.1.0", features = ["postgres", "time"] }
dotenvy = "0.15"
time = "0.3.29"
anyhow = "1.0.75"
lazy_static = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
goldie = "0.4.3"
rstest = "0.18.2"
